--- a/infra/terraform/mql/lambda_src/package.json
+++ b/infra/terraform/mql/lambda_src/package.json
@@ -4,6 +4,7 @@
   "version": "1.0.0",
   "type": "commonjs",
   "dependencies": {
-    "@aws-sdk/client-secrets-manager": "^3.0.0"
+    "@aws-sdk/client-secrets-manager": "^3.0.0",
+    "pg": "^8.16.3"
   }
 }
